navneet-rathi-com-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
spec:
  tls:
  - hosts:
    - navneet.rathi.com
    secretName: navneet-secret
  rules:
  - host: navneet.rathi.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: coffee-svc
          servicePort: 80
      - path: /
        backend:
          serviceName: nginx-svc
          servicePort: 80
